<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/no_internet_tab_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/nointernet_tab_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/system_prymary_color"
            android:theme="@style/ThemeOverlay.Toobar"
            app:menu="@menu/top_menu"
            app:title="@string/popular"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/no_internet_image_view"
        android:layout_width="95dp"
        android:layout_height="82dp"
        android:background="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/no_internet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_tab_appBarLayout"
        app:layout_constraintVertical_bias="0.444" />

    <TextView
        android:id="@+id/no_internet_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:text="@string/error_lading_data"
        android:textColor="@color/blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_image_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no_internet_button"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_button"
        android:contentDescription="@string/favorite_button"
        android:text="@string/repeat"
        android:textAllCaps="false"
        android:textColor="@color/button_text_white_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>