<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_tab_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/main_tab_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/system_prymary_color"
            app:menu="@menu/top_menu"
            android:theme="@style/ThemeOverlay.Toobar"
            app:title="@string/popular"
            app:titleTextColor="@color/black"
             />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/kinopoisk_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginBottom="32dp"
        android:clipToPadding="false"
        android:paddingBottom="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/kinopoisk_popular_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tab_appBarLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kinopoisk_popular_button"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginBottom="28dp"
        android:text="@string/popular"
        android:textColor="@color/button_text_blue_color"
        android:textAllCaps="false"
        android:background="@drawable/light_blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kinopoisk_favorite_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/kinopoisk_favorite_button"
        android:layout_width="158dp"
        android:layout_height="45dp"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="28dp"
        android:textAllCaps="false"
        android:contentDescription="@string/favorite_button"
        android:background="@drawable/blue_button"
        android:textColor="@color/button_text_white_color"
        android:text="@string/favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kinopoisk_popular_button" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/popular_fragment_progress_bar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminate="true"
        app:indicatorColor="@color/progress_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tab_appBarLayout" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/popular_fragmant_list_progress_bar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:indicatorColor="@color/progress_color"
        app:layout_constraintBottom_toBottomOf="@+id/kinopoisk_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>